# upkit

./: .gitignore  Cargo.toml  README.md  action.yml  build.rs  package.json
.github/workflows/: ci.yml  coverage.yml  npm-publish.yml
npm/upkit/: package.json  upkit
scripts/npm/: common.mjs  publish.mjs  stage.mjs  sync-version.mjs  version.mjs
src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  test_support.rs
src/tools/: flutter.rs  go.rs  mod.rs  node.rs  python.rs  rust.rs  zig.rs
tests/: coverage.rs  coverage_child.rs  infrastructure_tests.rs  main_tests.rs  paths_coverage.rs  tools_flutter.rs  tools_go.rs  tools_node.rs  tools_python.rs  tools_rust.rs  tools_zig.rs
