[package]
name = "upkit"
version = "0.3.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "One CLI to check & update Go/Rust/Node/Python/Flutter (hybrid built-in + direct-download)."
readme = "README.md"
repository = "https://github.com/christiandoxa/upkit"
keywords = ["cli", "updater", "toolchain", "devtools"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.12"
dirs = "6"
hex = "0.4"
indicatif = "0.18"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zstd = "0.13"
tempfile = "3"
toml = "0.9"
which = "8"
